# chot

./: .gitignore  CMakeLists.txt
arena/: index.js  package-lock.json  package.json  process.js
arena/engines/: chot-uci  chot-uci-mate
arena/openings/: 8moves_v3.txt
source/: bitboard.cpp  bitboard.hpp  main.cpp  move.hpp  move_gen.cpp  piece.hpp  position.cpp  position.hpp  square.cpp  square.hpp  uci.cpp  util.hpp
source/engine/: engine.cpp  engine.hpp
source/representation/: bitboard.cpp  lut.hpp  move.cpp  move.hpp  move_gen.cpp  move_gen.hpp  position.cpp  position.hpp
tests/: perft.cpp
